--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,4 +7,4 @@ services:
       - 4000:4000
     volumes:
       - $PWD:/srv/jekyll
-    command: jekyll serve
+    command: jekyll serve --livereload
