--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,6 @@ copyright: "Unpublished Work (cleft) 2022-{currentYear} {author}"
 
 description: >- # this means to ignore newlines until "baseurl:"
   uuuseok's blog
-
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://uuuseok.github.io" # the base hostname & protocol for your site, e.g. https://example.com
 favicon: "" # the favicon for your site
@@ -144,12 +143,17 @@ lang: "ko"  # default lang is en
 
 # If you want to link only specific pages in your header, uncomment
 # this and add the path to the pages in order as they should show up
-# header_pages:
+header_pages:
 #   - index.html
 #   - archives.html
 #   - categories.html
 #   - tags.html
 #   - about.md
+  - about.html
+  - archives.html
+  - categories.html
+  - tags.html
+  - index.html
 
 # Page default value
 defaults:
